# StableBlock

./: CHANGELOG.md  LICENSE  README.md  bump-version.sh  stableblock.html
examples/: stress-test.sb
mcp-server/: pyproject.toml
mcp-server/src/stableblock_mcp/: app.py  server.py  state.py
mcp-server/src/stableblock_mcp/core/: generator.py  layout.py  parser.py  svg.py  templates.py  validate_layout.py  validator.py
mcp-server/src/stableblock_mcp/models/: __init__.py  types.py
mcp-server/src/stableblock_mcp/tools/: diagram.py  elements.py  export.py  smart.py
mcp-server/tests/: test_layout.py  test_parser_generator.py  test_svg.py  test_templates.py  test_tools.py  test_validate_layout.py
vscode-stableblock/: README.md  language-configuration.json  package.json  stableblock-0.4.5.vsix  stableblock-0.4.6.vsix
vscode-stableblock/src/: extension.js
vscode-stableblock/syntaxes/: stableblock.tmLanguage.json
